# population-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
app/: Home.py  experiment.ipynb  main.ipynb
app/config/: config.yml
app/pages/: 1_🌍_Analysis_name.py  1_🌍_Population_analysis.py  2_📖_Documentation.py
app/src/: config_parameters.py  utils.py  utils_ee.py  utils_plotting.py  utils_population.py
