[tool.poetry]
name = "population-tool"
version = "0.1.0"
description = ""
authors = ["Daniele Castellana <45374794+castledan@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
country-converter = "1.0.0"
earthengine-api = "0.1.357"
folium = "0.14.0"
geedim = "1.7.2"
geemap = "0.23.2"
geojson = "2.5.0"
geopandas = "0.12.2"
kaleido = "0.2.1"
matplotlib = "3.6.2"
plotly = "5.13.1"
pre-commit = "3.1.1"
python-dotenv = "1.0.0"
rasterio = "1.3.6"
rasterstats = "0.18.0"
streamlit = "1.20.0"
streamlit-ext = "0.1.6"
streamlit-folium = "0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
